# connectivity-app

./: .dockerignore  .gitignore  Makefile  README.md  SETUP.md  cloudbuild.yaml  deployment.md  docker-compose.local.yml
.claude/: claude.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/backend/: config.py  db.py  main.py
backend/src/backend/api/: boundaries.py  cache.py  cells.py  dashboard.py  destinations.py  health.py  ratelimit.py  schemas.py  sociodemographic.py  stats.py  transit.py
backend/src/backend/auth/: deps.py  middleware.py  schemas.py
backend/src/backend/models/: __init__.py  boundary.py  destination.py  grid.py  mode.py  municipality.py  population.py  score.py  tenant.py  travel_time.py
backend/tests/: test_auth.py  test_cells.py  test_dashboard.py  test_health.py
db/init/: 001_schema.sql  002_seed_demo.sql  003_comarcas.sql  004_min_travel_times.sql  005_add_departure_time.sql  006_gtfs_tables.sql  006_nucleos.sql  007_sociodemographic.sql
docker/: .env.example  backend.Dockerfile  cloudrun.Dockerfile  frontend.Dockerfile  r5r.Dockerfile  worker.Dockerfile
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/about/__tests__/: methodology-sections.test.ts  rich-text.test.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/api/debug-auth/: route.ts
frontend/app/context/: page.tsx
frontend/app/map/: page.tsx
frontend/components/: app-sidebar.tsx  connectivity-map.tsx  dashboard-charts.tsx  error-boundary.tsx  nav-bar.tsx  sidebar-layout.tsx  tab-button.tsx
frontend/components/__tests__/: app-sidebar.test.tsx  map-control-panel.test.ts  map-panel-section.test.tsx  map-panel-types.test.ts  sidebar-layout.test.ts
frontend/components/map/: map-control-panel.tsx  map-panel-section.tsx  map-panel-types.ts
frontend/components/ui/: breadcrumb.tsx  dropdown-menu.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
frontend/hooks/: use-area-detail.ts  use-context-data.ts  use-dashboard-data.ts  use-map-data.ts
frontend/lib/: api.ts  i18n.tsx  map-3d.ts  prefetch.ts  query-client.ts  query-keys.ts
frontend/lib/__tests__/: i18n.test.ts  map-3d.test.ts  utils.test.ts
frontend/lib/locales/: en.ts  es.ts  eu.ts
frontend/types/: index.ts
infra/: deploy.sh  setup-gcp.sh
r5r/config/: r5r_config.yaml
r5r/scripts/: build_r5_core.R  compute_travel_matrices.R
scripts/: sync-data.sh
worker/: pyproject.toml
worker/.duckdb/extensions/v1.5.1/linux_arm64/: spatial.duckdb_extension.info
worker/config/: scoring.yaml
worker/src/worker/: cli.py  config.py  db.py  io.py
worker/src/worker/pipeline/: compute_frequency.py  export_gcs.py  export_r5r.py  geoeuskadi.py  grid.py  gtfs_download.py  gtfs_import.py  import_car_ownership.py  import_demographics.py  import_income.py  import_nucleos.py  import_pois.py  import_population.py  population.py  seed_demo.py  travel_times.py  travel_times_sql.py
worker/src/worker/scoring/: compute_scores.py  config.py  diminishing.py  impedance.py
worker/tests/: test_cli.py  test_diminishing.py  test_impedance.py  test_import_nucleos.py  test_import_pois.py  test_import_population.py  test_population.py  test_scoring_integration.py  test_travel_times.py
