[tool.poetry]
name = "bizkaia-backend"
version = "0.1.0"
description = "Bizkaia Connectivity MVP – FastAPI Backend"
authors = ["Bizkaia Connectivity Team"]
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29.0"
geoalchemy2 = "^0.15.0"
pydantic = "^2.7"
pydantic-settings = "^2.3"
python-jose = {extras = ["cryptography"], version = "^3.3"}
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
