[tool.poetry]
name = "bizkaia-backend"
version = "0.2.0"
description = "Bizkaia Connectivity MVP – FastAPI Backend (DuckDB)"
authors = ["Bizkaia Connectivity Team"]
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0,<1.0.0"}
duckdb = "^1.1"
pydantic = "^2.7"
pydantic-settings = "^2.3"
PyJWT = {extras = ["crypto"], version = "^2.8"}
google-cloud-storage = {version = "^2.18", optional = true}

[tool.poetry.extras]
gcs = ["google-cloud-storage"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:jwt",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
